--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <!-- 블럭 1번 -->
     <div class="box1">
         <div class="con1">
-            <img src="img/사진2.png" alt="코카콜라로고" class="img01">
-            <img src="img/콜라 전면.png" alt="코카콜라제품사진" class="img02">
+            <img src="img/2.png" alt="코카콜라로고" class="img01">
+            <img src="img/drink 1.png" alt="코카콜라제품사진" class="img02">
         </div>
     </div>
     <!-- 블럭 2번 -->
     <div class="box2">
         <div class="con2">
-            <img src="img/코카 콜라로 마음을 전해봐요.png" alt="코카콜라슬로건">
-            <img src="img/사진 03.png" alt="코카콜라로고">
+            <img src="img/text.png" alt="코카콜라슬로건">
+            <img src="img/3.png" alt="코카콜라로고">
         </div>
     </div>
     <!-- 블럭 3번 -->
@@ -26,8 +26,8 @@
         <div class="box3_bg">
         </div>
         <div class="con3">
-            <img src="img/콜라측면.png" alt="콜라제품사진" class="img05">
-            <img src="img/사진04.png" alt="북극곰이미지" class="img06">
+            <img src="img/drink2.png" alt="콜라제품사진" class="img05">
+            <img src="img/4.png" alt="북극곰이미지" class="img06">
             <div class="txt">
                 일상 속 마법같은 짜릿한 순간을 함께 해온 <br>
                 코카-콜라!  <br>
@@ -41,20 +41,20 @@
     <!-- 블럭 4번 -->
     <div class="box4">
         <div class="con4">
-            <img src="img/사진10.png" alt="코카콜라라벨">
-            <img src= "img/사진12.png" alt="얼음">
+            <img src="img/10.png" alt="코카콜라라벨">
+            <img src= "img/12.png" alt="얼음">
         </div>
     </div>
     <!-- 블럭 5번 -->
     <div class="box5">
         <div class="con5">
-            <img src="img/콜라 3개.png" alt="코카콜라제품사진">
+            <img src="img/drink3.png" alt="코카콜라제품사진">
         </div>
     </div>
     <!-- 블럭 6번 -->
     <div class="box6">
         <div class="con6">
-            <img src="img/사진07.png" alt="코카콜라로고">
+            <img src="img/7.png" alt="코카콜라로고">
         </div>
     </div>
 </body>
